--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -8,7 +8,7 @@
   align-items: center;
 }
 .linktree .share-button {
- margin: 10%;
+ margin: 10px;
   width: 40px;
   height: 40px;
   border: 1px dashed #d0d5dd;
